# xedit

./: .gitignore  .kaba-repo  CMakeLists.txt  default.theme  meson.build  vcpkg.json  xmake.conf
codeeditor/: .kaba-package
codeeditor/sharedlib/: CMakeLists.txt  xmake.conf
codeeditor/sharedlib/src/: main.cpp
src/: DocumentEditor.cpp  DocumentEditor.h  EditorWindow.cpp  EditorWindow.h  HighlightScheme.cpp  HighlightScheme.h  Makefile  main.cpp  xmake.conf
src/dialogs/: DocumentSwitcher.cpp
src/lib/: config.h
src/lib/image/: color.cpp
src/lib/nix/: nix_config.h  nix_view.cpp
src/lib/syntaxhighlight/: BaseParser.cpp  BaseParser.h  ParserIni.cpp  ParserKaba.cpp  ParserKaba.h
src/lib/vulkan/: Device.h  Instance.cpp  SwapChain.cpp  SwapChain.h
src/lib/xhui/: ContextVulkan.cpp  ContextVulkan.h  Painter.cpp  Painter.h  PainterGL.cpp  PainterVulkan.cpp  Panel.cpp  Panel.h  Theme.cpp  Theme.h  Window.cpp  Window.h  xhui.cpp  xhui.h
src/lib/xhui/Controls/: Button.cpp  Button.h  CheckBox.cpp  Control.cpp  Control.h  DrawingArea.cpp  DrawingArea.h  Edit.cpp  Edit.h  Grid.cpp  Grid.h  HeaderBar.cpp  HeaderBar.h  Label.cpp  Label.h  ListView.cpp  ListView.h
src/lib/xhui/controls/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Control.cpp  Control.h  DrawingArea.cpp  DrawingArea.h  Edit.cpp  Edit.h  Grid.cpp  Grid.h  Group.cpp  HeaderBar.cpp  Label.cpp  Label.h  ListView.cpp  ListView.h  MultilineEdit.cpp  MultilineEdit.h  TabControl.cpp  Viewport.cpp
src/lib/xhui/draw/: font.cpp  font.h
src/lib/ygraphics/: ContextGL.cpp
src/parser/: BaseParser.cpp  BaseParser.h  ParserC.cpp  ParserC.h  ParserCmake.cpp  ParserCmake.h  ParserHui.cpp  ParserHui.h  ParserIni.cpp  ParserIni.h  ParserPython.cpp  ParserPython.h  ParserShader.cpp  ParserShader.h
xedit/: .kaba-package  codeeditor.kaba  editorwindow.kaba  xedit.kaba
xedit/sharedlib/: CMakeLists.txt  vcpkg.json  xmake.conf
xedit/sharedlib/src/: EditorWindow.cpp  EditorWindow.h  main.cpp
xedit/sharedlib/src/dialogs/: DocumentSwitcher.h
xedit/sharedlib/src/lib/codeeditor/: CodeEditor.cpp
xedit/sharedlib/src/lib/pattern/: Observable.h  _kaba_export.cpp
xedit/sharedlib/src/lib/syntaxhighlight/: ParserKaba.cpp
xedit/sharedlib/src/lib/xhui/: _kaba_export.cpp
xedit/sharedlib/src/lib/xhui/controls/: Edit.cpp
